...
                android:background="@drawable/shape_item"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginLeft="5dp"
                android:id="@+id/cancel_are_you_sure"
                android:textColor="#FFF"
                android:text="@string/cancel"
                android:background="@drawable/shape_item"/>
        </LinearLayout>
    </LinearLayout>

...
