...
    <string name="txt_name">Nome</string>
    <string name="txt_confirm_password">Confirme a senha</string>

    <!--Menu-->
    <string name="configuracoes">Configuracoes</string>
    <string name="delete_classs">Excluir Sala</string>
    <string name="sort_groups">Ordenar Grupos</string>

    <!--Tab-->
    <string name="tab_text_students">Alunos</string>
    <string name="tab_text_tests">Salas</string>
    <string name="tab_group_number">Grupo 1</string>

...
