<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="fga.mds.gpp.trezentos.View.Activity.SignUpActivity"
    android:background="#ffbd19"
    android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar_signup"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:titleTextColor="#FFF"
            app:subtitleTextColor="#FFF">


        </android.support.v7.widget.Toolbar>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="50dp"
            android:weightSum="2">



                <android.support.design.widget.TextInputLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                        <EditText
                            android:layout_gravity="center"
                            android:inputType="textPersonName"
                            android:id="@+id/edit_text_name_register"

                            android:layout_width="170dp"
                            android:layout_height="40dp"

                            android:hint="@string/txt_name"
                            android:textColor="@color/textRegisterColor"
                            android:textColorHint="@android:color/black"
                            android:background="@drawable/rounded_edit_text"
                            android:paddingLeft="20dp"
                            android:elevation="2dp"/>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1">

                        <EditText
                            android:layout_gravity="center"
                            android:inputType="textPersonName"
                            android:id="@+id/edit_text_last_name_register"


                            android:layout_width="170dp"
                            android:layout_height="40dp"
                            android:layout_marginBottom="10dp"
                            android:hint="Sobrenome"
                            android:textColor="@color/textRegisterColor"
                            android:textColorHint="@android:color/black"
                            android:background="@drawable/rounded_edit_text"
                            android:paddingLeft="20dp"
                            android:elevation="2dp"/>
                </android.support.design.widget.TextInputLayout>


        </LinearLayout>



        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"

            android:layout_gravity="center">

                <EditText

                    android:inputType="textPersonName"
                    android:id="@+id/edit_text_email_register"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"

                    android:hint="@string/txt_email"
                    android:textColor="@color/textRegisterColor"
                    android:textColorHint="@android:color/black"
                    android:background="@drawable/rounded_edit_text"

                    android:paddingLeft="20dp"
                    />
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_gravity="center">

                <EditText
                    android:inputType="textPassword"
                    android:id="@+id/edit_text_password_register"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"

                    android:maxLength="16"
                    android:hint="@string/txt_password"
                    android:textColor="@color/textRegisterColor"
                    android:textColorHint="@android:color/black"
                    android:background="@drawable/rounded_edit_text"

                    android:paddingLeft="20dp"

                    />
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_gravity="center">

                <EditText
                    android:inputType="textPassword"
                    android:id="@+id/edit_text_password_confirmation"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginBottom="10dp"
                    android:hint="@string/txt_confirm_password"
                    android:textColor="@color/textRegisterColor"
                    android:textColorHint="@android:color/black"
                    android:background="@drawable/rounded_edit_text"
                    android:maxLength="16"
                    android:paddingLeft="20dp"

                    />
        </android.support.design.widget.TextInputLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:weightSum="2">



                <android.support.design.widget.TextInputLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                        <EditText
                            android:layout_gravity="center"
                            android:inputType="numberDecimal"
                            android:id="@+id/edit_text_DDD_telephone"

                            android:layout_width="60dp"
                            android:layout_height="40dp"
                            android:maxLength="3"
                            android:hint="@string/txt_telephone_DDD"
                            android:textColor="@color/textRegisterColor"
                            android:textColorHint="@android:color/black"
                            android:background="@drawable/rounded_edit_text"
                            android:paddingLeft="10dp"
                            android:elevation="2dp"/>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_gravity="center"
                    android:layout_weight="0">

                        <EditText
                            android:layout_gravity="center"
                            android:inputType="numberDecimal"
                            android:id="@+id/edit_text_telephone"

                            android:maxLength="9"
                            android:layout_width="280dp"
                            android:layout_height="40dp"
                            android:layout_marginBottom="10dp"
                            android:hint="@string/txt_telephone"
                            android:textColor="@color/textRegisterColor"
                            android:textColorHint="@android:color/black"
                            android:background="@drawable/rounded_edit_text"
                            android:paddingLeft="20dp"
                            android:elevation="2dp"/>
                </android.support.design.widget.TextInputLayout>


        </LinearLayout>




        <Button
            android:layout_width="match_parent"
            android:layout_height="45dp"

            android:text="@string/btn_signup"
            android:textColor="#fff"
            android:layout_marginTop="40dp"
            android:background="@drawable/rounded_register_button"
            android:id="@+id/sign_up_button"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp" />

        <Button
                android:background="@android:color/transparent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/btn_already_signed_up"
                android:layout_gravity="center"
                android:textSize="13sp"
                android:textColor="#6000"

                android:id="@+id/already_sign_up"/>

</LinearLayout>
