...
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:elevation="5dp">

        <EditText
            android:inputType="textEmailAddress"
            android:id="@+id/edit_text_email"
            android:layout_width="match_parent"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_height="40dp"

            android:hint="@string/txt_email"
...
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <EditText
            android:inputType="textPassword"
            android:id="@+id/edit_text_password"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/txt_password"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
...
            android:paddingLeft="10dp"

            />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/button_login"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_gravity="center"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
...
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:weightSum="3">

        <Button
            android:layout_weight="1"
            android:id="@+id/button_register"
            android:background="@android:color/transparent"
            android:text="@string/btn_login_to_sign_up"
            android:textColor="#000"
            android:textSize="13sp"
            android:layout_width="88dp"
            android:layout_height="48dp"
...
